--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <title>RegEx Form Validation</title>
   </head>
-  <body>
-    <div class="container">
+  <body class="py-5">
+    <div class="container bg-primary py-5">
         <div class="row">
-            <div class="col-md-6 mx-auto">
+            <div class="col-md-6 mx-auto bg-white text-primary p-3 text-white">
                 <h1>User Form</h1>
-                <form class="form">
+                <form class="form py-3">
                     <div class="form-group">
                         <label for="name">Name: </label>
                         <input type="text" id="name" name="name" class="form-control" placeholder="Name">
