edited the code to disable and enable the submit class dynamiclly depends on the valid status of the form

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             Enter a valid phone number
                         </div>
                     </div>
-                    <input type="submit" class="btn btn-primary btn-block">
+                    <input type="submit" class="btn btn-primary btn-block" id="submitBtn" disabled>
                 </form>
             </div>
         </div>
